--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Roc Perf Stats</title>
-
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <script src="elm.js"></script>
   </head>
   <body>
+    <script src="/dist/elm.js"></script>
     <script>
       Elm.Main.init();
     </script>
